<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_homepage" tools:ignore="MissingTranslation">www.simlar.org</string>
    <string name="app_name" tools:ignore="MissingTranslation">Simlar</string>
    <string name="button_continue">Continue</string>
    <string name="button_cancel">Cancel</string>
    <string name="simlar_service_on_destroy">Simlar terminated</string>
    <string name="main_activity_contact_list_loading_contacts">Loading contacts&#8230;</string>
    <string name="main_activity_contact_list_no_contacts_found">No contacts found. Ask your friends to install Simlar too.</string>
    <string name="main_activity_contact_list_error_loading_contacts">Error: Failed to load contacts.</string>
    <string name="main_activity_contact_list_error_loading_contacts_no_internet">Failed to connect to the server. Check your internet connection.</string>
    <string name="main_activity_contact_list_error_loading_contacts_wrong_credentials">Failed to authorize. Recreate account.</string>
    <string name="main_activity_contact_list_error_loading_contacts_wrong_credentials_dialog_title">Failed to authorize.</string>
    <string name="main_activity_contact_list_error_loading_contacts_wrong_credentials_dialog_message">Register again.</string>
    <string name="main_activity_menu_unmaintained">&#10071; unmaintained</string>
    <string name="main_activity_menu_reload_contacts">Reload contacts</string>
    <string name="main_activity_menu_upload_logfile">Report bug</string>
    <string name="main_activity_menu_enable_debug_mode">Enable debug mode</string>
    <string name="main_activity_menu_disable_debug_mode">Disable debug mode</string>
    <string name="main_activity_menu_delete_account">Delete simlar account</string>
    <string name="main_activity_menu_fake_telephone_book">Screenshot telephone book</string>
    <string name="main_activity_menu_fake_telephone_book_disable">Regular telephone book</string>
    <string name="main_activity_menu_notification_settings">Do Not Disturb settings</string>
    <string name="main_activity_menu_app_settings">App settings</string>
    <string name="main_activity_menu_tell_a_friend">Invite friends</string>
    <string name="main_activity_menu_show_about">About</string>
    <string name="main_activity_menu_quit">Quit Simlar</string>
    <string name="main_activity_alert_upload_log_file_title">Really report bug?</string>
    <string name="main_activity_alert_upload_log_file_text">This will upload a log file. Afterwards you will be asked to write an email describing the bug.\n\nDo you want to continue?</string>
    <string name="main_activity_alert_uploading_log_file_failed_title">Error</string>
    <string name="main_activity_alert_uploading_log_file_failed_text">Log file creation failed => abort sending</string>
    <string name="main_activity_alert_enable_linphone_debug_mode_title">Really enable debug mode?</string>
    <string name="main_activity_alert_enable_linphone_debug_mode_text">This will increase log file entries a lot. Only do so if you have been asked for it by a Simlar developer. Or you really know what you are doing.</string>
    <string name="main_activity_alert_delete_account_title">Really delete account?</string>
    <string name="main_activity_alert_delete_account_text">This will delete your simlar account on your phone and on the servers.</string>
    <string name="main_activity_alert_delete_account_error_title">Delete account failed</string>
    <string name="main_activity_alert_delete_account_error_text">Try again later.</string>
    <string name="main_activity_alert_delete_account_success_title">Account deleted</string>
    <string name="main_activity_alert_delete_account_success_text">Simlar will quit now.</string>
    <string name="main_activity_alert_quit_simlar_title">Really quit Simlar?</string>
    <string name="main_activity_alert_quit_simlar_text">Once you quit Simlar it is not possible to receive calls anymore.\n\nIf you do not mind installing Google Play Services, you may consider installing the Push-Version of Simlar e.g. from the Google Play Store. It uses Push-Notifications and therefore does not require to run all the time.</string>
    <string name="main_activity_tell_a_friend_chooser_title">Invite friends</string>
    <string name="main_activity_tell_a_friend_subject">Simlar</string>
    <string name="main_activity_tell_a_friend_text">Let’s make free and encrypted calls with Simlar: https://www.simlar.org/download</string>
    <string name="upload_log_file_send_email_to_developer">Send email to developer</string>
    <string name="upload_log_file_progress">Uploading log file&#8230;</string>
    <string name="notification_simlar_status_offline">offline</string>
    <string name="notification_simlar_status_connecting">connecting</string>
    <string name="notification_simlar_status_online">online</string>
    <string name="notification_simlar_status_error">registration failed</string>
    <string name="linphone_call_state_notification_initializing">initializing</string>
    <string name="linphone_call_state_notification_calling">calling %1$s</string>
    <string name="linphone_call_state_notification_receiving_call">online</string>
    <string name="linphone_call_state_notification_talking">talking to %1$s</string>
    <string name="linphone_call_state_notification_ended">call with %1$s ended</string>
    <string name="linphone_call_state_notification_paused">paused call with %1$s</string>
    <string name="linphone_call_state_notification_resuming">resuming call with %1$s ended</string>
    <string name="linphone_ice_state_none">none</string>
    <string name="linphone_ice_state_not_activated">not activated</string>
    <string name="linphone_ice_state_failed">failed</string>
    <string name="linphone_ice_state_in_progress">in progress</string>
    <string name="linphone_ice_state_host_connection">direct connection</string>
    <string name="linphone_ice_state_reflexive_connection">direct connection with NAT</string>
    <string name="linphone_ice_state_relay_connection">relay connection</string>
    <string name="network_quality_good">good</string>
    <string name="network_quality_average">average</string>
    <string name="network_quality_poor">poor</string>
    <string name="network_quality_very_poor">very poor</string>
    <string name="network_quality_unusable">unusable</string>
    <string name="network_quality_unknown">unknown</string>
    <string name="audio_output_type">Bluetooth, &#8230;</string>
    <string name="audio_output_type_phone">Phone</string>
    <string name="audio_output_type_wired_headset">Headset</string>
    <string name="audio_output_type_speaker">Speaker</string>
    <string name="audio_output_type_bluetooth">Bluetooth</string>
    <string name="call_activity_label_quality">Network Quality: </string>
    <string name="call_activity_toggle_video">Video Call</string>
    <string name="call_activity_sound_settings">Sound Settings</string>
    <string name="call_activity_microphone_mute">Microphone mute</string>
    <string name="call_activity_microphone_on">Microphone on</string>
    <string name="call_activity_microphone_disabled">Microphone disabled</string>
    <string name="call_activity_loudspeaker_on">Loudspeaker</string>
    <string name="call_activity_loudspeaker_off">Loudspeaker off</string>
    <string name="call_activity_terminate_call">Terminate call</string>
    <string name="call_activity_no_authentication_token">&#8230;</string>
    <string name="call_activity_verified_authentication_token">Verified Code: </string>
    <string name="call_activity_please_verify_authentication_token">Does the person you are speaking to have the same code?</string>
    <string name="call_activity_button_authentication_token_verify">safe connection</string>
    <string name="call_activity_button_authentication_token_wrong">I don’t care</string>
    <string name="call_activity_connecting_to_server">Connecting to server&#8230;</string>
    <string name="call_activity_connecting_to_server_timed_out">Connecting to server timed out</string>
    <string name="call_activity_outgoing_connecting">Waiting for contact&#8230;</string>
    <string name="call_activity_outgoing_ringing">Ringing&#8230;</string>
    <string name="call_activity_encrypting">Encrypting&#8230;</string>
    <string name="call_activity_talking">Talking&#8230;</string>
    <string name="call_activity_call_ended_because_declined">Call declined</string>
    <string name="call_activity_call_ended_because_user_offline">Contact is offline</string>
    <string name="call_activity_call_ended_because_incompatible_media">Incompatible media type</string>
    <string name="call_activity_call_ended_because_user_busy">Busy</string>
    <string name="call_activity_call_ended_normally">Call ended</string>
    <string name="call_activity_alert_accept_video_request_title">Video Call</string>
    <string name="call_activity_alert_accept_video_request_text">Do you accept to update to a video call?</string>
    <string name="call_activity_video_denied">Contact denied video</string>
    <string name="connection_details_dialog_fragment_label_quality">Quality: </string>
    <string name="connection_details_dialog_fragment_label_codec">Codec: </string>
    <string name="connection_details_dialog_fragment_label_ice_state">ICE State: </string>
    <string name="connection_details_dialog_fragment_label_upload">Up: </string>
    <string name="connection_details_dialog_fragment_label_download">Down: </string>
    <string name="connection_details_dialog_fragment_label_packet_loss">Loss: </string>
    <string name="connection_details_dialog_fragment_label_late_packets">Late: </string>
    <string name="connection_details_dialog_fragment_label_round_trip_delay">Delay: </string>
    <string name="connection_details_dialog_fragment_label_jitter">Jitter: </string>
    <string name="connection_details_dialog_fragment_kilobytes_per_second">%1$s kb/s</string>
    <string name="connection_details_dialog_fragment_milli_seconds">%1$s ms</string>
    <string name="connection_details_dialog_fragment_percent">%1$s &#65285;</string>
    <string name="verify_number_activity_title">Creating account</string>
    <string name="verify_number_activity_verify_your_number">Verify your telephone number:</string>
    <string name="about_activity_copyright">&#169; 2013&#8211;2017 The Simlar authors\nAll rights reserved.</string>
    <string name="about_activity_license">License: GNU General Public License\nhttp://www.gnu.org/licenses/old-licenses/gpl-2.0.html</string>
    <string name="about_activity_privacy_statement_and_terms_of_use"><a href="https://www.simlar.org/datenschutzerklaerung/">privacy statement</a>\nand\n<a href="https://www.simlar.org/nutzungsbedingungen/">terms of use</a></string>
    <string name="create_account_activity_request">Request account creation</string>
    <string name="create_account_activity_registration_code_hint">registration code</string>
    <string name="create_account_activity_confirm">Confirm account creation</string>
    <string name="create_account_activity_first_login">First login</string>
    <string name="create_account_activity_message_sms">We are currently not able to send an SMS to the number you provided:\n%1$s\n\nCheck your number or try again later.</string>
    <string name="create_account_activity_button_cancel">Cancel</string>
    <string name="create_account_activity_button_call">No SMS received?\nGet registration code with call.</string>
    <string name="create_account_activity_button_confirm">Confirm</string>
    <string name="ringing_activity_default_contact_name">Unknown</string>
    <string name="ringing_activity_title">calls you</string>
    <string name="ringing_activity_phone_is_ringing">your phone is ringing</string>
    <string name="ringing_notification_decline">Decline</string>
    <string name="ringing_notification_accept">Accept</string>
</resources>