<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright (C) 2013 The Simlar Authors.

  This file is part of Simlar. (https://www.simlar.org)

  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 2
  of the License, or (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program; if not, write to the Free Software
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_reload_contacts"
        android:orderInCategory="1"
        android:title="@string/main_activity_menu_reload_contacts"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_enable_debug_mode"
        android:orderInCategory="2"
        android:title="@string/main_activity_menu_enable_debug_mode"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_upload_logfile"
        android:orderInCategory="3"
        android:title="@string/main_activity_menu_upload_logfile"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_account"
        android:orderInCategory="4"
        android:title="@string/main_activity_menu_delete_account"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_fake_telephone_book"
        android:orderInCategory="5"
        android:title="@string/main_activity_menu_fake_telephone_book"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_notification_settings"
        android:orderInCategory="6"
        android:title="@string/main_activity_menu_notification_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_app_settings"
        android:orderInCategory="7"
        android:title="@string/main_activity_menu_app_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_tell_a_friend"
        android:orderInCategory="8"
        android:title="@string/main_activity_menu_tell_a_friend"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_show_about"
        android:orderInCategory="9"
        android:title="@string/main_activity_menu_show_about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_quit"
        android:orderInCategory="10"
        android:title="@string/main_activity_menu_quit"
        app:showAsAction="never"/>

</menu>
