<!--
  Copyright (C) 2013 The Simlar Authors.

  This file is part of Simlar. (https://www.simlar.org)

  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 2
  of the License, or (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program; if not, write to the Free Software
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:shrinkColumns="*"
             android:stretchColumns="*"
             tools:context="org.simlar.widgets.ConnectionDetailsDialogFragment"
             tools:ignore="SelectableText">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textViewLabelQuality"
            style="@style/connectionDetailsActivityTableLabel"
            android:text="@string/connection_details_dialog_fragment_label_quality"/>

        <TextView
            android:id="@+id/textViewQuality"
            style="@style/connectionDetailsActivityTableValue"/>

        <TextView
            android:id="@+id/textViewLabelCodec"
            style="@style/connectionDetailsActivityTableLabel"
            android:text="@string/connection_details_dialog_fragment_label_codec"/>

        <TextView
            android:id="@+id/textViewCodec"
            style="@style/connectionDetailsActivityTableValue"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left">

        <TextView
            android:id="@+id/textViewLabelDownload"
            style="@style/connectionDetailsActivityTableLabel"
            android:text="@string/connection_details_dialog_fragment_label_download"/>

        <TextView
            android:id="@+id/textViewDownload"
            style="@style/connectionDetailsActivityTableValue"/>

        <TextView
            android:id="@+id/textViewLabelPacketLoss"
            style="@style/connectionDetailsActivityTableLabel"
            android:text="@string/connection_details_dialog_fragment_label_packet_loss"/>

        <TextView
            android:id="@+id/textViewPacketLoss"
            style="@style/connectionDetailsActivityTableValue"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left">

        <TextView
            android:id="@+id/textViewLabelUpload"
            style="@style/connectionDetailsActivityTableLabel"
            android:text="@string/connection_details_dialog_fragment_label_upload"/>

        <TextView
            android:id="@+id/textViewUpload"
            style="@style/connectionDetailsActivityTableValue"/>

        <TextView
            android:id="@+id/textViewLabelLatePackets"
            style="@style/connectionDetailsActivityTableLabel"
            android:text="@string/connection_details_dialog_fragment_label_late_packets"/>

        <TextView
            android:id="@+id/textViewLatePackets"
            style="@style/connectionDetailsActivityTableValue"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textViewLabelRoundTripDelay"
            style="@style/connectionDetailsActivityTableLabel"
            android:text="@string/connection_details_dialog_fragment_label_round_trip_delay"/>

        <TextView
            android:id="@+id/textViewRoundTripDelay"
            style="@style/connectionDetailsActivityTableValue"/>

        <TextView
            android:id="@+id/textViewLabelJitter"
            style="@style/connectionDetailsActivityTableLabel"
            android:text="@string/connection_details_dialog_fragment_label_jitter"/>

        <TextView
            android:id="@+id/textViewJitter"
            style="@style/connectionDetailsActivityTableValue"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_top"
        android:gravity="center"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textViewLabelIceState"
            style="@style/connectionDetailsActivityTable"
            android:text="@string/connection_details_dialog_fragment_label_ice_state"/>

        <TextView
            android:id="@+id/textViewIceState"
            style="@style/connectionDetailsActivityTable"/>
    </TableRow>

</TableLayout>
