<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright (C) 2013 The Simlar Authors.

  This file is part of Simlar. (https://www.simlar.org)

  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 2
  of the License, or (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program; if not, write to the Free Software
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="org.simlar.widgets.CreateAccountActivity">

    <LinearLayout
        android:id="@+id/linearLayoutProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBarRequest"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account_activity_request"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBarConfirm"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account_activity_confirm"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBarFirstLogIn"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account_activity_first_login"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutSpacer"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/linearLayoutProgress"/>

    <RelativeLayout
        android:id="@+id/layoutMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutSpacer">

        <TextView
            android:id="@+id/textViewDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:minHeight="80dp"
            android:text="@string/create_account_activity_message_sms"/>

        <EditText
            android:id="@+id/editTextRegistrationCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewDetails"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:ems="8"
            android:hint="@string/create_account_activity_registration_code_hint"
            android:inputType="number"
            android:maxLength="6"
            android:importantForAutofill="no"
            tools:ignore="UnusedAttribute">

            <requestFocus/>
        </EditText>

        <Button
            android:id="@+id/buttonCall"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextRegistrationCode"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:enabled="false"
            android:onClick="onCallClicked"
            android:text="@string/create_account_activity_button_call"
            android:textColor="@drawable/button_dialog"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonCall"
            android:layout_marginTop="20dp">

            <Button
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="onCancelClicked"
                android:text="@string/create_account_activity_button_cancel"
                android:textColor="@drawable/button_dialog"/>

            <Button
                android:id="@+id/buttonConfirm"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="onConfirmClicked"
                android:text="@string/create_account_activity_button_confirm"
                android:textColor="@drawable/button_dialog"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
